--- a/package.json
+++ b/package.json
@@ -17,40 +17,41 @@
     "url": "https://github.com/huajielee/webpack/issues"
   },
   "homepage": "https://github.com/huajielee/webpack#readme",
-  "devDependencies": {},
-  "dependencies": {
+  "devDependencies": {
     "webpack": "^4.37.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
+    "babel-polyfill": "^6.26.0",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
-    "autoprefixer": "^9.6.1",
-    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.1.0",
-    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "babel-loader": "^8.0.6",
+    "cache-loader": "^4.1.0",
+    "css-loader": "^3.1.0",
+    "file-loader": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "thread-loader": "^2.1.2",
-    "url-loader": "^2.1.0",
     "vue-html-loader": "^1.2.4",
+    "url-loader": "^2.1.0",
     "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
     "dart-sass": "^1.22.7",
+    "autoprefixer": "^9.6.1"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
     "echarts": "^4.2.1",
-    "element-ui": "^2.11.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "element-ui": "^2.7.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
