--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "autoprefixer": "^9.6.1"
   },
   "dependencies": {
+    "array-diff": "0.0.1",
     "axios": "^0.19.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.7.2",
